<?xml version="1.0"?>
<package format="2">
  <name>supercamera_ros</name>
  <version>1.0.0</version>
  <description>ROS driver for UseePlus/SuperCamera USB borescope cameras (VID:2ce3 PID:3828)</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
